add '#' prefix to tags